--- a/Grafos/.project
+++ b/Grafos/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>proyecto-3</name>
+	<name>Proyecto3</name>
 	<comment></comment>
 	<projects>
 	</projects>
